@@ -95,7 +95,7 @@ class PaperChannelServiceImplTest {
     @Test
     void prepareAnalogNotificationForSimpleRegisteredLetterWithAarAndDocument() {
         //GIVEN
-        NotificationInt notificationInt = newNotificationWithPayments("taxid");
+        NotificationInt notificationInt = newNotificationWithPayments();
 
         Mockito.when(timelineUtils.checkIsNotificationViewed(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
         Mockito.when(timelineUtils.checkIsNotificationPaid(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
@@ -103,7 +103,7 @@ class PaperChannelServiceImplTest {
         PnAuditLogEvent auditLogEvent = Mockito.mock(PnAuditLogEvent.class);
         Mockito.when(auditLogService.buildAuditLogEvent(Mockito.anyString(), Mockito.anyInt(), Mockito.eq(PnAuditLogEventType.AUD_PD_PREPARE), Mockito.anyString(), any(), any(), any())).thenReturn(auditLogEvent);
         Mockito.when(auditLogEvent.generateSuccess(Mockito.anyString(), any())).thenReturn(auditLogEvent);
-        Mockito.when(notificationUtils.getRecipientFromIndex(any(), anyInt())).thenReturn(notificationInt.getRecipients().get(0));
+        Mockito.when(notificationUtils.getRecipientFromIndex(any(), anyInt())).thenReturn(notificationInt.getRecipients().getFirst());
 
         Mockito.when(attachmentUtils.retrieveSendAttachmentMode(Mockito.any(), Mockito.any())).thenReturn(SendAttachmentMode.AAR_DOCUMENTS);
 
@@ -122,14 +122,14 @@ class PaperChannelServiceImplTest {
     @Test
     void prepareAnalogNotificationForSimpleRegisteredLetterWithAarDocumentAndPayments() {
         //GIVEN
-        NotificationInt notificationInt = newNotificationWithPayments("taxid");
+        NotificationInt notificationInt = newNotificationWithPayments();
 
         Mockito.when(timelineUtils.checkIsNotificationViewed(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
         Mockito.when(timelineUtils.checkIsNotificationPaid(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
         PnAuditLogEvent auditLogEvent = Mockito.mock(PnAuditLogEvent.class);
         Mockito.when(auditLogService.buildAuditLogEvent(Mockito.anyString(), Mockito.anyInt(), Mockito.eq(PnAuditLogEventType.AUD_PD_PREPARE), Mockito.anyString(), any(), any(), any())).thenReturn(auditLogEvent);
         Mockito.when(auditLogEvent.generateSuccess(Mockito.anyString(), any())).thenReturn(auditLogEvent);
-        Mockito.when(notificationUtils.getRecipientFromIndex(any(), anyInt())).thenReturn(notificationInt.getRecipients().get(0));
+        Mockito.when(notificationUtils.getRecipientFromIndex(any(), anyInt())).thenReturn(notificationInt.getRecipients().getFirst());
 
 
         Mockito.when(attachmentUtils.retrieveSendAttachmentMode(Mockito.any(), Mockito.any())).thenReturn(SendAttachmentMode.AAR_DOCUMENTS_PAYMENTS);
@@ -149,7 +149,7 @@ class PaperChannelServiceImplTest {
     @Test
     void prepareAnalogNotificationWithAarAndDocument() {
         //GIVEN
-        NotificationInt notificationInt = newNotificationWithPayments("taxid");
+        NotificationInt notificationInt = newNotificationWithPayments();
 
         Mockito.when(timelineUtils.checkIsNotificationViewed(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
         Mockito.when(timelineUtils.checkIsNotificationPaid(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
@@ -157,7 +157,7 @@ class PaperChannelServiceImplTest {
         PnAuditLogEvent auditLogEvent = Mockito.mock(PnAuditLogEvent.class);
         Mockito.when(auditLogService.buildAuditLogEvent(Mockito.anyString(), Mockito.anyInt(), Mockito.eq(PnAuditLogEventType.AUD_PD_PREPARE), Mockito.anyString(), any(), any(), any())).thenReturn(auditLogEvent);
         Mockito.when(auditLogEvent.generateSuccess(Mockito.anyString(), any())).thenReturn(auditLogEvent);
-        Mockito.when(notificationUtils.getRecipientFromIndex(any(), anyInt())).thenReturn(notificationInt.getRecipients().get(0));
+        Mockito.when(notificationUtils.getRecipientFromIndex(any(), anyInt())).thenReturn(notificationInt.getRecipients().getFirst());
 
         Mockito.when(attachmentUtils.retrieveSendAttachmentMode(Mockito.any(), Mockito.any())).thenReturn(SendAttachmentMode.AAR_DOCUMENTS);
 
@@ -176,7 +176,7 @@ class PaperChannelServiceImplTest {
     @Test
     void prepareAnalogNotificationWithAarDocumentAndPayments() {
         //GIVEN
-        NotificationInt notificationInt = newNotificationWithPayments("taxid");
+        NotificationInt notificationInt = newNotificationWithPayments();
 
         Mockito.when(timelineUtils.checkIsNotificationViewed(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
         Mockito.when(timelineUtils.checkIsNotificationPaid(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
@@ -184,7 +184,7 @@ class PaperChannelServiceImplTest {
         PnAuditLogEvent auditLogEvent = Mockito.mock(PnAuditLogEvent.class);
         Mockito.when(auditLogService.buildAuditLogEvent(Mockito.anyString(), Mockito.anyInt(), Mockito.eq(PnAuditLogEventType.AUD_PD_PREPARE), Mockito.anyString(), any(), any(), any())).thenReturn(auditLogEvent);
         Mockito.when(auditLogEvent.generateSuccess(Mockito.anyString(), any())).thenReturn(auditLogEvent);
-        Mockito.when(notificationUtils.getRecipientFromIndex(any(), anyInt())).thenReturn(notificationInt.getRecipients().get(0));
+        Mockito.when(notificationUtils.getRecipientFromIndex(any(), anyInt())).thenReturn(notificationInt.getRecipients().getFirst());
 
         Mockito.when(attachmentUtils.retrieveSendAttachmentMode(Mockito.any(), Mockito.any())).thenReturn(SendAttachmentMode.AAR_DOCUMENTS_PAYMENTS);
 
@@ -203,7 +203,7 @@ class PaperChannelServiceImplTest {
     @Test
     void prepareAnalogNotificationForSimpleRegisteredLetterAlreadyviewed() {
         //GIVEN
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         Mockito.when(timelineUtils.checkIsNotificationViewed(Mockito.anyString(), Mockito.anyInt())).thenReturn(true);
 
@@ -219,7 +219,7 @@ class PaperChannelServiceImplTest {
     @Test
     void prepareAnalogNotificationForSimpleRegisteredLetterAlreadyPaid() {
         //GIVEN
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         Mockito.when(timelineUtils.checkIsNotificationViewed(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
         Mockito.when(timelineUtils.checkIsNotificationPaid(Mockito.anyString(), Mockito.anyInt())).thenReturn(true);
@@ -235,7 +235,7 @@ class PaperChannelServiceImplTest {
     @Test
     void prepareAnalogNotificationForSimpleRegisteredLetterCancelled() {
         //GIVEN
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         Mockito.when(timelineUtils.checkIsNotificationCancellationRequested(Mockito.anyString())).thenReturn(true);
 
@@ -251,7 +251,7 @@ class PaperChannelServiceImplTest {
     @Test
     void prepareAnalogNotificationAlreadyviewed() {
         //GIVEN
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         Mockito.when(timelineUtils.checkIsNotificationViewed(Mockito.anyString(), Mockito.anyInt())).thenReturn(true);
 
@@ -267,7 +267,7 @@ class PaperChannelServiceImplTest {
     @Test
     void prepareAnalogNotificationAlreadyPaid() {
         //GIVEN
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         Mockito.when(timelineUtils.checkIsNotificationViewed(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
         Mockito.when(timelineUtils.checkIsNotificationPaid(Mockito.anyString(), Mockito.anyInt())).thenReturn(true);
@@ -283,7 +283,7 @@ class PaperChannelServiceImplTest {
     @Test
     void prepareAnalogNotificationCancelled() {
         //GIVEN
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         Mockito.when(timelineUtils.checkIsNotificationCancellationRequested(Mockito.anyString())).thenReturn(true);
 
@@ -300,7 +300,7 @@ class PaperChannelServiceImplTest {
         //GIVEN
         PhysicalAddressInt physicalAddressInt = PhysicalAddressInt.builder().address("via casa").fullname("full name").build();
 
-        NotificationInt notificationInt = newNotificationWithPayments("taxid");
+        NotificationInt notificationInt = newNotificationWithPayments();
 
         CategorizedAttachmentsResultInt categorizedAttachmentsResult = CategorizedAttachmentsResultInt.builder().acceptedAttachments(new ArrayList<>()).discardedAttachments(new ArrayList<>()).build();
 
@@ -332,7 +332,7 @@ class PaperChannelServiceImplTest {
         //GIVEN
         PhysicalAddressInt physicalAddressInt = PhysicalAddressInt.builder().address("via casa").fullname("full name").build();
 
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         CategorizedAttachmentsResultInt categorizedAttachmentsResult = CategorizedAttachmentsResultInt.builder().acceptedAttachments(new ArrayList<>()).discardedAttachments(new ArrayList<>()).build();
 
@@ -351,7 +351,7 @@ class PaperChannelServiceImplTest {
         //GIVEN
         PhysicalAddressInt physicalAddressInt = PhysicalAddressInt.builder().address("via casa").fullname("full name").build();
 
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         CategorizedAttachmentsResultInt categorizedAttachmentsResult = CategorizedAttachmentsResultInt.builder().acceptedAttachments(new ArrayList<>()).discardedAttachments(new ArrayList<>()).build();
 
@@ -370,7 +370,7 @@ class PaperChannelServiceImplTest {
         //GIVEN
         PhysicalAddressInt physicalAddressInt = PhysicalAddressInt.builder().address("via casa").fullname("full name").build();
 
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         CategorizedAttachmentsResultInt categorizedAttachmentsResult = CategorizedAttachmentsResultInt.builder().acceptedAttachments(new ArrayList<>()).discardedAttachments(new ArrayList<>()).build();
 
@@ -390,7 +390,7 @@ class PaperChannelServiceImplTest {
         //GIVEN
         PhysicalAddressInt physicalAddressInt = PhysicalAddressInt.builder().address("via casa").fullname("full name").build();
 
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         CategorizedAttachmentsResultInt categorizedAttachmentsResult = CategorizedAttachmentsResultInt.builder().acceptedAttachments(new ArrayList<>()).discardedAttachments(new ArrayList<>()).build();
 
@@ -423,7 +423,7 @@ class PaperChannelServiceImplTest {
         //GIVEN
         PhysicalAddressInt physicalAddressInt = PhysicalAddressInt.builder().address("via casa").fullname("full name").build();
 
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         CategorizedAttachmentsResultInt categorizedAttachmentsResult = CategorizedAttachmentsResultInt.builder().acceptedAttachments(new ArrayList<>()).discardedAttachments(new ArrayList<>()).build();
 
@@ -443,7 +443,7 @@ class PaperChannelServiceImplTest {
         //GIVEN
         PhysicalAddressInt physicalAddressInt = PhysicalAddressInt.builder().address("via casa").fullname("full name").build();
 
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         CategorizedAttachmentsResultInt categorizedAttachmentsResult = CategorizedAttachmentsResultInt.builder().acceptedAttachments(new ArrayList<>()).discardedAttachments(new ArrayList<>()).build();
 
@@ -463,7 +463,7 @@ class PaperChannelServiceImplTest {
         //GIVEN
         PhysicalAddressInt physicalAddressInt = PhysicalAddressInt.builder().address("via casa").fullname("full name").build();
 
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         CategorizedAttachmentsResultInt categorizedAttachmentsResult = CategorizedAttachmentsResultInt.builder().acceptedAttachments(new ArrayList<>()).discardedAttachments(new ArrayList<>()).build();
 
@@ -482,7 +482,7 @@ class PaperChannelServiceImplTest {
         //GIVEN
         PhysicalAddressInt physicalAddressInt = PhysicalAddressInt.builder().address("via casa").fullname("full name").build();
 
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         CategorizedAttachmentsResultInt categorizedAttachmentsResult = CategorizedAttachmentsResultInt.builder().acceptedAttachments(new ArrayList<>()).discardedAttachments(new ArrayList<>()).build();
 
@@ -508,7 +508,7 @@ class PaperChannelServiceImplTest {
         //GIVEN
         PhysicalAddressInt physicalAddressInt = PhysicalAddressInt.builder().address("via casa").fullname("full name").build();
 
-        NotificationInt notificationInt = newNotificationWithPayments("taxid");
+        NotificationInt notificationInt = newNotificationWithPayments();
 
         CategorizedAttachmentsResultInt categorizedAttachmentsResult = CategorizedAttachmentsResultInt.builder().acceptedAttachments(new ArrayList<>()).discardedAttachments(new ArrayList<>()).build();
 
@@ -516,7 +516,7 @@ class PaperChannelServiceImplTest {
         Mockito.when(timelineUtils.checkIsNotificationPaid(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
 
         PnAuditLogEvent auditLogEvent = Mockito.mock(PnAuditLogEvent.class);
-        Mockito.when(notificationUtils.getRecipientFromIndex(any(), anyInt())).thenReturn(notificationInt.getRecipients().get(0));
+        Mockito.when(notificationUtils.getRecipientFromIndex(any(), anyInt())).thenReturn(notificationInt.getRecipients().getFirst());
         Mockito.when(auditLogService.buildAuditLogEvent(Mockito.anyString(), Mockito.anyInt(), Mockito.eq(PnAuditLogEventType.AUD_PD_EXECUTE), Mockito.anyString(), any(), any(), any())).thenReturn(auditLogEvent);
         Mockito.when(auditLogEvent.generateSuccess(any(), (Integer) any(), any())).thenReturn(auditLogEvent);
         Mockito.when(paperChannelSendClient.send(any(PaperChannelSendRequest.class))).thenReturn(new SendResponse());
@@ -536,13 +536,13 @@ class PaperChannelServiceImplTest {
         //GIVEN
         PhysicalAddressInt physicalAddressInt = PhysicalAddressInt.builder().address("via casa").fullname("full name").build();
 
-        NotificationInt notificationInt = newNotificationWithPayments("taxid");
+        NotificationInt notificationInt = newNotificationWithPayments();
 
         CategorizedAttachmentsResultInt categorizedAttachmentsResult = CategorizedAttachmentsResultInt.builder().acceptedAttachments(new ArrayList<>()).discardedAttachments(new ArrayList<>()).build();
 
         Mockito.when(timelineUtils.checkIsNotificationViewed(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
         Mockito.when(timelineUtils.checkIsNotificationPaid(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
-        Mockito.when(notificationUtils.getRecipientFromIndex(any(), anyInt())).thenReturn(notificationInt.getRecipients().get(0));
+        Mockito.when(notificationUtils.getRecipientFromIndex(any(), anyInt())).thenReturn(notificationInt.getRecipients().getFirst());
 
         PnAuditLogEvent auditLogEvent = Mockito.mock(PnAuditLogEvent.class);
         Mockito.when(auditLogService.buildAuditLogEvent(Mockito.anyString(), Mockito.anyInt(), Mockito.eq(PnAuditLogEventType.AUD_PD_EXECUTE), Mockito.anyString(), any(), any(), any())).thenReturn(auditLogEvent);
@@ -565,7 +565,7 @@ class PaperChannelServiceImplTest {
         //GIVEN
         PhysicalAddressInt physicalAddressInt = PhysicalAddressInt.builder().address("via casa").fullname("full name").build();
 
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         CategorizedAttachmentsResultInt categorizedAttachmentsResult = CategorizedAttachmentsResultInt.builder().acceptedAttachments(new ArrayList<>()).discardedAttachments(new ArrayList<>()).build();
 
@@ -593,7 +593,7 @@ class PaperChannelServiceImplTest {
         //GIVEN
         PhysicalAddressInt physicalAddressInt = PhysicalAddressInt.builder().address("via casa").fullname("full name").build();
 
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         CategorizedAttachmentsResultInt categorizedAttachmentsResult = CategorizedAttachmentsResultInt.builder().acceptedAttachments(new ArrayList<>()).discardedAttachments(new ArrayList<>()).build();
 
@@ -622,7 +622,7 @@ class PaperChannelServiceImplTest {
         //GIVEN
         PhysicalAddressInt physicalAddressInt = PhysicalAddressInt.builder().address("via casa").fullname("full name").build();
 
-        NotificationInt notificationInt = newNotification("taxid");
+        NotificationInt notificationInt = newNotification();
 
         ResultFilterInt acceptedAttachments = ResultFilterInt.builder().fileKey("filekey").result(ResultFilterEnum.SUCCESS).reasonCode("reasonCode").reasonDescription("reasonDescription").build();
 
@@ -647,7 +647,7 @@ class PaperChannelServiceImplTest {
     @ExtendWith(MockitoExtension.class)
     @Test
     void sendAnalogNotificationSchedulesTimeout() {
-        NotificationInt notification = newNotification("taxid2");
+        NotificationInt notification = newNotification();
         String iun = notification.getIun();
         Mockito.when(timelineUtils.checkIsNotificationCancellationRequested(Mockito.anyString())).thenReturn(false);
         Mockito.when(timelineUtils.checkIsNotificationViewed(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
@@ -696,7 +696,7 @@ class PaperChannelServiceImplTest {
     @Test
     void prepareAnalogNotificationWithAarAndDocument_withSendAnalogTimeoutCreationRequest() {
         //GIVEN
-        NotificationInt notificationInt = newNotificationWithPayments("taxid");
+        NotificationInt notificationInt = newNotificationWithPayments();
 
         Mockito.when(timelineUtils.checkIsNotificationViewed(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
         Mockito.when(timelineUtils.checkIsNotificationPaid(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
@@ -704,7 +704,7 @@ class PaperChannelServiceImplTest {
         PnAuditLogEvent auditLogEvent = Mockito.mock(PnAuditLogEvent.class);
         Mockito.when(auditLogService.buildAuditLogEvent(Mockito.anyString(), Mockito.anyInt(), Mockito.eq(PnAuditLogEventType.AUD_PD_PREPARE), Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(auditLogEvent);
         Mockito.when(auditLogEvent.generateSuccess(Mockito.anyString(), Mockito.any())).thenReturn(auditLogEvent);
-        Mockito.when(notificationUtils.getRecipientFromIndex(Mockito.any(), anyInt())).thenReturn(notificationInt.getRecipients().get(0));
+        Mockito.when(notificationUtils.getRecipientFromIndex(Mockito.any(), anyInt())).thenReturn(notificationInt.getRecipients().getFirst());
 
         TimelineElementInternal previousSendEvent = Mockito.mock(TimelineElementInternal.class);
         Mockito.when(previousSendEvent.getDetails()).thenReturn(new SendAnalogDetailsInt());
@@ -712,7 +712,7 @@ class PaperChannelServiceImplTest {
         Mockito.when(attachmentUtils.retrieveSendAttachmentMode(Mockito.any(), Mockito.any())).thenReturn(SendAttachmentMode.AAR_DOCUMENTS);
         Mockito.when(analogDeliveryTimeoutUtils.isSendAnalogTimeoutCreationRequestPresent(Mockito.anyString(), Mockito.anyInt(), Mockito.anyInt())).thenReturn(true);
         Mockito.when(paperChannelUtils.buildSendAnalogDomicileEventId(eq(notificationInt), Mockito.anyInt(), Mockito.anyInt())).thenReturn(null);
-        Mockito.when(paperChannelUtils.getPaperChannelNotificationTimelineElement(Mockito.anyString(), Mockito.any())).thenReturn((TimelineElementInternal) previousSendEvent);
+        Mockito.when(paperChannelUtils.getPaperChannelNotificationTimelineElement(Mockito.anyString(), Mockito.any())).thenReturn(previousSendEvent);
 
         // WHEN
         paperChannelService.prepareAnalogNotification(notificationInt, 0, 1);
@@ -730,7 +730,7 @@ class PaperChannelServiceImplTest {
     @Test
     void prepareAnalogNotificationWithAarAndDocument_withoutSendAnalogTimeoutCreationRequest() {
         //GIVEN
-        NotificationInt notificationInt = newNotificationWithPayments("taxid");
+        NotificationInt notificationInt = newNotificationWithPayments();
 
         Mockito.when(timelineUtils.checkIsNotificationViewed(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
         Mockito.when(timelineUtils.checkIsNotificationPaid(Mockito.anyString(), Mockito.anyInt())).thenReturn(false);
@@ -738,7 +738,7 @@ class PaperChannelServiceImplTest {
         PnAuditLogEvent auditLogEvent = Mockito.mock(PnAuditLogEvent.class);
         Mockito.when(auditLogService.buildAuditLogEvent(Mockito.anyString(), Mockito.anyInt(), Mockito.eq(PnAuditLogEventType.AUD_PD_PREPARE), Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(auditLogEvent);
         Mockito.when(auditLogEvent.generateSuccess(Mockito.anyString(), Mockito.any())).thenReturn(auditLogEvent);
-        Mockito.when(notificationUtils.getRecipientFromIndex(Mockito.any(), anyInt())).thenReturn(notificationInt.getRecipients().get(0));
+        Mockito.when(notificationUtils.getRecipientFromIndex(Mockito.any(), anyInt())).thenReturn(notificationInt.getRecipients().getFirst());
 
         TimelineElementInternal previousSendEvent = Mockito.mock(TimelineElementInternal.class);
         Mockito.when(previousSendEvent.getDetails()).thenReturn(new SendAnalogFeedbackDetailsInt());
@@ -746,7 +746,7 @@ class PaperChannelServiceImplTest {
         Mockito.when(attachmentUtils.retrieveSendAttachmentMode(Mockito.any(), Mockito.any())).thenReturn(SendAttachmentMode.AAR_DOCUMENTS);
         Mockito.when(analogDeliveryTimeoutUtils.isSendAnalogTimeoutCreationRequestPresent(Mockito.anyString(), Mockito.anyInt(), Mockito.anyInt())).thenReturn(false);
         Mockito.when(paperChannelUtils.buildSendAnalogDomicileEventId(eq(notificationInt), Mockito.anyInt(), Mockito.anyInt())).thenReturn(null);
-        Mockito.when(paperChannelUtils.getPaperChannelNotificationTimelineElement(Mockito.anyString(), Mockito.any())).thenReturn((TimelineElementInternal) previousSendEvent);
+        Mockito.when(paperChannelUtils.getPaperChannelNotificationTimelineElement(Mockito.anyString(), Mockito.any())).thenReturn(previousSendEvent);
         Mockito.when(paperChannelUtils.buildSendAnalogFeedbackEventId(eq(notificationInt), Mockito.anyInt(), Mockito.anyInt())).thenReturn(anyString());
 
         // WHEN
@@ -761,7 +761,7 @@ class PaperChannelServiceImplTest {
         Mockito.verify(paperChannelUtils).buildSendAnalogFeedbackEventId(eq(notificationInt), Mockito.anyInt(), Mockito.anyInt());
     }
 
-    private NotificationInt newNotification(String TAX_ID) {
+    private NotificationInt newNotification() {
         return NotificationInt.builder()
                 .iun("IUN_01")
                 .paProtocolNumber("protocol_01")
@@ -771,8 +771,8 @@ class PaperChannelServiceImplTest {
                 )
                 .recipients(Collections.singletonList(
                         NotificationRecipientInt.builder()
-                                .taxId(TAX_ID)
-                                .internalId(TAX_ID + "ANON")
+                                .taxId("taxid")
+                                .internalId("taxid" + "ANON")
                                 .denomination("Nome Cognome/Ragione Sociale")
                                 .digitalDomicile(LegalDigitalAddressInt.builder()
                                         .type(LegalDigitalAddressInt.LEGAL_DIGITAL_ADDRESS_TYPE.PEC)
@@ -783,7 +783,7 @@ class PaperChannelServiceImplTest {
                 .build();
     }
 
-    private NotificationInt newNotificationWithPayments(String TAX_ID) {
+    private NotificationInt newNotificationWithPayments() {
         return NotificationInt.builder()
                 .iun("IUN_01")
                 .paProtocolNumber("protocol_01")
@@ -797,8 +797,8 @@ class PaperChannelServiceImplTest {
                         .build()))
                 .recipients(Collections.singletonList(
                         NotificationRecipientInt.builder()
-                                .taxId(TAX_ID)
-                                .internalId(TAX_ID + "ANON")
+                                .taxId("taxid")
+                                .internalId("taxid" + "ANON")
                                 .denomination("Nome Cognome/Ragione Sociale")
                                 .digitalDomicile(LegalDigitalAddressInt.builder()
                                         .type(LegalDigitalAddressInt.LEGAL_DIGITAL_ADDRESS_TYPE.PEC)
@@ -820,7 +820,7 @@ class PaperChannelServiceImplTest {
                                                                 .ref(NotificationDocumentInt.Ref.builder().key("PagoPaKey").build())
                                                                 .digests(NotificationDocumentInt.Digests.builder().sha256("PagoPaSha256").build())
                                                                 .build()))
-                                                        .creditorTaxId(TAX_ID)
+                                                        .creditorTaxId("taxid")
                                                         .noticeCode("noticeCode")
                                                         .build())
                                                 .build()
